# Sealed

./: FUTURE_PLANS.md  PROTOCOL.md  README.md  SETTLEMENT_PLAN.md  file_list.txt
.claude/: settings.local.json
app/: package-lock.json  package.json
app/app/: globals.css  layout.tsx  not-found.tsx  page.tsx
app/app/activity/: page.tsx
app/app/create/: page.tsx
app/app/explore/: page.tsx
app/app/history/: page.tsx
app/app/how-it-works/: page.tsx
app/app/idl/: sealed_auction.json
app/app/profile/: page.tsx
app/app/settings/: page.tsx
app/app/types/: sealed_auction.ts
app/app/utils/: arcium.ts
app/components/: Button.tsx  Input.tsx
app/components/layout/: Footer.tsx  Header.tsx
app/components/providers/: LoadingProvider.tsx  WalletContextProvider.tsx
app/components/ui/: Badge.tsx  DatePicker.tsx  Dropdown.tsx  LoadingBar.tsx  (+4 more)
app/utils/: anchor.ts
arcium_program/: .gitignore  Anchor.toml  Dockerfile.arcium  deploy_output.txt  help_output.txt  id.json  package-lock.json  package.json
arcium_program/encrypted-ixs/: Cargo.toml
arcium_program/scripts/: check_cluster.ts  check_mxe.ts  decode_account.ts  fix_mxe.ts  init_arcium_env.ts  init_comp_defs.ts  init_devnet.ts  init_mxe.ts  init_mxe_direct.ts  init_mxe_manual.ts  verify_mxe_status.ts
arcium_program/tests/: arcium_program.ts
sealed_auction/: Anchor.toml  Cargo.toml  package-lock.json  package.json
sealed_auction/programs/constant_time_eq/: Cargo.toml
sealed_auction/programs/constant_time_eq/src/: lib.rs
sealed_auction/tests/: sealed_auction.ts
tests/: sealed_auction.ts
(+26 files in other folders)
