[package]
name = "constant_time_eq"
version = "0.3.0"
authors = ["Cesar Eduardo Barros <cesarb@cesarb.eti.br>"]
description = "Compares two equal-sized byte strings in constant time."
documentation = "https://docs.rs/constant_time_eq"
readme = "README.md"
keywords = ["constant-time", "cryptography", "security"]
license = "CC0-1.0"
repository = "https://github.com/cesarb/constant_time_eq"
include = ["src/lib.rs", "Cargo.toml", "README.md", "COPYING"]
edition = "2018"

[features]
idl-build = []
